Fixing demo page alignment

--- a/pages/demo-styles.css
+++ b/pages/demo-styles.css
@@ -1,10 +1,10 @@
-/* Fonts from Google Fonts - more at https://fonts.google.com */
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');
 @import url('https://fonts.googleapis.com/css?family=Merriweather:400,700');
 
 html {
-max-width: 960px;
-font-family: "Merriweather", "Open Sans", serif, sans-serif;
+  max-width: 960px;
+  font-family: "Merriweather", "Open Sans", serif, sans-serif;
+  margin: 0 auto;
 }
 
 body {
